# sc2-telemetry-tester

./: .env.example  README.md  package-lock.json  package.json
cpp/: CMakeLists.txt  README_CPP.md
cpp/include/: CsvParser.h  InfluxWriter.h  TelemetryRecord.h
cpp/src/: CsvParser.cpp  InfluxWriter.cpp  main.cpp
cpp/tests/: test_main.cpp
data/: data_format.json  test_telemetry.csv
sql/: create_tables.sql
src/: generate_test_data.js  test_connection.js  upload_telemetry.js
